updates on widly's